<resources>
    <string name="connection_string">http://w499.cs.science.cmu.ac.th:83/u560510593/</string>
    <!--<string name="connection_string">http://127.0.0.1:80/notification/</string>-->
    <string name="app_name">gotogether</string>
    <string name="enter_username_hint">Enter E-mail</string>
    <string name="enter_password_hint">Enter Password</string>
    <string name="btn_login">Login here</string>
    <string name="btn_register">new user? register here</string>
    <string name="regis_username_hint">Enter username (8—14 character)</string>
    <string name="regis_password_hint">Enter password (8—12 character)</string>
    <string name="regis_password2_hint">Enter password again</string>
    <string name="regis_firstname_hint">Enter your first name</string>
    <string name="regis_lastname_hint">Enter your last name</string>
    <string name="regis_displayname">Enter your display name (this name will show to other)</string>
    <string name="regis_email_hint">Enter your E-mail</string>
    <string name="regis_phone_hint">Enter your phone number (optional)</string>
    <string name="btn_sign_up">Sign up now!</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="nav_home">home</string>
    <string name="nav_group">Group</string>
    <string name="nav_friend">Friend</string>
    <string name="nav_setting">Setting</string>
    <string name="nav_accountsetting">Account setting</string>
    <string name="nav_appseting">Application setting</string>
    <string name="nav_logout">Logout</string>
    <string name="loading">Loading</string>
    <string name="title_activity_friend">Friend</string>
    <string name="title_activity_group">Group</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="friend_empty_view">you not have any friend :(</string>
    <string name="addfriend_empty_view">not found any user</string>

    <string name="notification_count_zero">0</string>
    <string name="title_activity_userdetail">Loading</string>
    <string name="label_activity_userDetail_contect">Contect Detail</string>
    <string name="label_activity_userDetail_operation">Operation </string>

    <string name="group_activity_meetingpointset">meeting point set! click to get direction</string>
    <string name="group_empty_view">you not join anygroup yet :(</string>

    <string name="grouphome_activity_menu_leavegroup">leave</string>
    <string name="grouphome_activity_menu_map">map</string>

    <string name="map_activity_btn_setpoint">setting meeting point</string>
    <string name="map_activity_memberlist">member location</string>

    <string name="menu_member_give_leader">give leader</string>
    <string name="menu_member_kick">kick this member</string>
    <string name="menu_add_more_member">add more member</string>

    <string name="displayname">Displayname </string>
    <string name="fristname">Firstname </string>
    <string name="lastname">Lastname </string>
    <string name="email">E-mail </string>
    <string name="phone">Phone </string>

    <string name="Send">Send</string>
    <string name="accept">Accept</string>
    <string name="submit_chat">Enter new massange</string>

    <string name="unfriend">unfriend</string>
    <string name="chat">chat</string>

    <string name="groupname">Name</string>
    <string name="groupdescription">description</string>

    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_person_chat">Chat</string>
    <string name="title_activity_group_home">Group</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="title_activity_home_v2">Gotogether</string>
    <string name="log_out">Sign out</string>
    <string name="shared_loc">share your location</string>
</resources>
