<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_directions_run_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_group"
            android:icon="@drawable/ic_person_pin_black_24dp"
            android:title="@string/nav_group" />
        <item
            android:id="@+id/nav_friend"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/nav_friend" />
    </group>

    <item android:title="@string/nav_setting">
        <menu>
            <item
                android:id="@+id/nav_accountsetting"
                android:icon="@drawable/ic_border_color_black_24dp"
                android:title="@string/nav_accountsetting" />

            <item
                android:id="@+id/nav_appseting"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/nav_appseting" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_power_settings_new_black_24dp"
                android:title="@string/nav_logout" />
        </menu>
    </item>

</menu>
