<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/LoginCoordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/Loginlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="chanathip.gotogether.LoginActivity">

        <ScrollView
            android:id="@+id/scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/m_table_menu">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textinputlayout_txtUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtUser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/signin_inputlayout_mobile"
                        android:hint="@string/enter_username_hint"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:nextFocusForward="@+id/txtPass" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textinputlayout_txtPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textinputlayout_txtUser">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtPass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/enter_password_hint"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>
        </ScrollView>


        <TableLayout
            android:id="@+id/m_table_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:padding="0dp"
            android:stretchColumns="*">


            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/btn_login"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btnregis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/btn_register" />
        </TableLayout>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
